# gofr-dig

./: .gitignore  README.md  pyproject.toml  requirements.txt  review.md
.github/: copilot-instructions.md
app/: build_info.py  config.py  housekeeper.py  main_mcp.py  main_mcpo.py  main_web.py  rate_limit.py  web_server.py
artifacts/: trivy-report.json
config/: gofr_approles.json
docker/: Dockerfile.dev  Dockerfile.prod  build-base.sh  build-dev.sh  build-prod.sh  build-vault.sh  compose.dev.yml  compose.prod.yml  docker-compose.yml  entrypoint-dev.sh  entrypoint-prod.sh  run-dev.sh  run-prod.sh  start-dev.sh  start-prod.sh  stop-prod.sh
docs/: ARCHITECTURE.md  AUTH_REPLACEMENT_PLAN.md  GROUP_AUTH_PLAN.md  SESSION_MANAGEMENT_PROPOSAL.md  TOOLS.md  WORKFLOW.md  approle_and_seq_bootstrap_implementation_plan.md  approle_bootstrap_shared_implementation_plan.md  architecture.md  auth-upgrade.md  auth_reference_for_gofr_doc.md  bootstrap_diff_analysis.md  bootstrap_new_machine.md  code_quality_allowlist_implementation_plan.md  code_quality_allowlist_spec.md  code_quality_large_file_gate_implementation_plan.md  code_quality_large_file_gate_spec.md  getting_started.md  housekeeper.md  logging_vault_step_by_step_implementation_plan.md  news_parser.md  port_centralization_guide.md  radon_code_complexity_implementation_plan.md  radon_code_complexity_proposal.md  radon_code_complexity_spec.md  remediation_plan.md  run_dev_master_implementation_plan.md  run_dev_master_refinement.md  run_dev_master_spec.md  seq_logging_migration_plan.md  session_remediation_plan.md  tools.md  (+6 more)
(+166 files in other folders)
