[project]
name = "gofr-dig"
version = "0.1.0"
description = "GOFR-DIG MCP Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
# Note: gofr-common is installed as editable from lib/gofr-common submodule by entrypoint
# Core deps (mcp, pydantic, fastapi, uvicorn, starlette, PyJWT, httpx, mcpo) come from gofr-common
dependencies = [
    # Project-specific dependencies only
    "html2text>=2025.4.15",
    "weasyprint>=67.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "curl_cffi>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
filterwarnings = [
    "ignore::RuntimeWarning:matplotlib",
]
